--- a/src/components/avatar/Avatar.module.scss
+++ b/src/components/avatar/Avatar.module.scss
@@ -4,8 +4,8 @@
 
 .image {
     border-radius: 100%;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .badge {
