--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,8 +1,6 @@
 @use "../../styles/colors";
 
 .Header {
-    display: flex;
-    justify-content: center;
     background-color: colors.$background_paper;
 }
 
@@ -17,16 +15,12 @@
 
 .searchPaper {
     background-color: colors.$background_default !important;
-}
-
-.container {
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
+    align-self: center;
 }
 
 .menuItem {
     color: colors.$text_primary !important;
     font-size: 8pt !important;
     text-transform: none !important;
+    align-self: center;
 }
