feat: added steps to How component

--- a/src/components/step/Step.module.scss
+++ b/src/components/step/Step.module.scss
@@ -1,10 +1,7 @@
 @use "../../styles/colors";
 
 .How {
-    width: 50%; // temporary
-    margin: auto; // temporary
-    margin-top: 2rem; // temporary
-    border-radius: 1rem;
+    margin: 2rem;
 }
 
 .number {
@@ -12,21 +9,28 @@
     color: rgba(colors.$text_primary, 0.1);
     border-bottom-left-radius: 1rem;
     border-top-left-radius: 1rem;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: bold;
+
+    p {
+        margin: 0;
+    }
 }
 
 .main{
     background-color: colors.$background_paper;
     border-bottom-right-radius: 1rem;
     border-top-right-radius: 1rem;
-    padding: 2rem;
+    padding: 1rem 1.5rem;
 
     h2{
-
+        font-size: .8rem;
+        text-transform: uppercase;
+        line-height: 1rem;
     }
 
     p{
         color: colors.$text_secondary;
+        font-size: .7rem;
     }
 }
