refactor: changed Step to HowStep

--- a/src/components/how/How.module.scss
+++ b/src/components/how/How.module.scss
@@ -40,4 +40,6 @@
     margin-top: 2rem !important;
     color: colors.$primary_main !important;
     background-color: colors.$text_primary !important;
+    font-weight: bold !important;
+    font-size: .8rem !important;
 }
