--- a/src/components/user/User.module.scss
+++ b/src/components/user/User.module.scss
@@ -7,7 +7,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-evenly;
     margin-left: 0.8rem;
     line-height: .5rem;
