--- a/src/components/featured/Featured.module.scss
+++ b/src/components/featured/Featured.module.scss
@@ -1,4 +1,9 @@
+.Featured {
+    margin-top: 4.875rem;
+    margin-bottom: 2.8rem;
+}
+
 .image {
-    border-radius: .8rem;
+    border-radius: 1rem;
     cursor: pointer;
 }
