--- a/src/components/trending/Trending.module.scss
+++ b/src/components/trending/Trending.module.scss
@@ -1,3 +1,7 @@
+.Trending{
+    margin-bottom: 3.813rem;    
+}
+
 .select {
     align-self: center !important;
 }
@@ -5,4 +9,5 @@
 .title {
     font-size: 3rem;
     line-height: 3.657rem;
+    margin-bottom: 2.875rem;
 }
