fix: fixed Collector styles

--- a/src/components/collectors/TopCollectors.module.scss
+++ b/src/components/collectors/TopCollectors.module.scss
@@ -2,9 +2,16 @@
 
 .TopCollectors {
     background-color: rgba(colors.$primary_main, 10%);
-    padding-bottom: 2.5rem;
+    padding-bottom: 7.125rem;
 }
 
 .select {
     align-self: center;
+}
+
+.title {
+    font-size: 3rem;
+    line-height: 3.657rem;
+    margin-top: 4.438rem;
+    margin-bottom: 2.875rem;
 }
