--- a/src/components/how/HowStep.module.scss
+++ b/src/components/how/HowStep.module.scss
@@ -1,17 +1,19 @@
 @use "../../styles/colors";
 
+$step-radius: 1.875rem;
+
 .How {
-    margin: 2rem;
+    margin: 2rem 0;
     background-color: colors.$background_paper;
-    border-radius: 1rem;
+    border-radius: $step-radius;
 }
 
 .number {
     background-color: rgba(colors.$primary_main, 10%);
     color: colors.$text_primary;
-    border-bottom-left-radius: 1rem;
-    border-top-left-radius: 1rem;
-    font-size: 4.5rem;
+    border-bottom-left-radius: $step-radius;
+    border-top-left-radius: $step-radius;
+    font-size: 6.25rem;
     font-weight: bold;
 
     p {
@@ -21,18 +23,19 @@
 
 .main{
     background-color: colors.$background_paper;
-    border-bottom-right-radius: 1rem;
-    border-top-right-radius: 1rem;
-    padding: 1rem 1.5rem;
+    border-bottom-right-radius: $step-radius;
+    border-top-right-radius: $step-radius;
+    padding: 2.2rem 3.375rem;
 
     h2{
-        font-size: .8rem;
+        font-size: 1.125rem;
         text-transform: uppercase;
-        line-height: 1rem;
+        line-height: 1.375rem;
     }
 
     p{
         color: colors.$text_secondary;
-        font-size: .7rem;
+        font-size: 0.875rem;
+        line-height: 1.5rem;
     }
 }
