fix: fixed Auctions styles

--- a/src/components/auctions/Auctions.module.scss
+++ b/src/components/auctions/Auctions.module.scss
@@ -1,3 +1,14 @@
+.Auctions {
+    padding-bottom: 6rem;
+}
+
 .select {
     align-self: center !important;
+}
+
+.title {
+    font-size: 3rem;
+    line-height: 3.657rem;
+    margin-top: 5.625rem;
+    margin-bottom: 3.125rem;
 }
