fix: added title class

--- a/src/components/product/ProductInfoTitle.module.scss
+++ b/src/components/product/ProductInfoTitle.module.scss
@@ -1,3 +1,7 @@
 .product-info-title {
-    font-weight: normal; // temps
+    font-weight: normal; // temp
+}
+
+.title {
+    font-weight: normal; // temp
 }
