feat: implemented ProductInfoCreator component

--- a/src/components/user/User.module.scss
+++ b/src/components/user/User.module.scss
@@ -18,7 +18,7 @@
 }
 
 .name {
-    font-weight: bold;
+    font-weight: 900;
     font-size: 1rem;
     color: colors.$text_primary;
     line-height: 1rem;
