--- a/src/components/product/ProductImage.module.scss
+++ b/src/components/product/ProductImage.module.scss
@@ -1,7 +1,9 @@
-.product-image{
-    text-decoration: none; // temp
-}
-
-.image {
-    border-radius: 1rem; // temp
+.product-image {
+    height: 100%;
+    .image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 1rem;
+    }
 }
