--- a/src/components/product/ProductInfoTitle.module.scss
+++ b/src/components/product/ProductInfoTitle.module.scss
@@ -1,7 +1,8 @@
 .product-info-title {
-    font-weight: normal; // temp
-}
-
-.title {
-    font-weight: normal; // temp
+    .title {
+        font-size: 3.75rem !important;
+        line-height: 4.571rem !important;
+        font-weight: 900 !important;
+        margin-bottom: 1.75rem !important;
+    }
 }
