--- a/src/components/product/ProductImage.module.scss
+++ b/src/components/product/ProductImage.module.scss
@@ -3,6 +3,7 @@
     .image {
         width: 100%;
         height: 100%;
+        max-height: 50rem !important;
         object-fit: cover;
         border-radius: 1rem;
     }
