--- a/src/components/product/ProductInfoTimer.module.scss
+++ b/src/components/product/ProductInfoTimer.module.scss
@@ -9,18 +9,20 @@
     color: colors.$background_paper;
     border-radius: 1rem;
     overflow: hidden;
+    height: 100%;
 
-    .header{
+    .header {
         background-color: rgba(colors.$background_default, 10%);
-        padding: .5rem 0;
+        padding: 0.5rem 0;
         .title {
             margin: 0;
+            font-size: 0.75rem;
             font-weight: 600;
             text-transform: uppercase;
             line-height: 1.375rem;
             text-align: center;
         }
-    }   
+    }
 
     .timer {
         font-weight: bold;
