--- a/src/components/description/Description.module.scss
+++ b/src/components/description/Description.module.scss
@@ -1,9 +1,25 @@
-.description {
-    .text {
-        font-weight: normal; // temp
-    }
+@use "../../styles/colors.scss";
 
-    .image {
-        font-weight: normal; // temp
+.description {
+    .container {
+        background-color: colors.$background_paper !important;
+        max-width: 60% !important;
+        margin-top: -7rem !important;
+        margin-bottom: 6rem !important;
+        padding: 4rem !important;
+
+        .text {
+            color: colors.$text_secondary;
+        }
+
+        .image {
+            margin-top: 3.75rem;
+            margin-bottom: 1rem;
+            height: 15rem;
+            width: 100%;
+            border-radius: 1rem;
+            object-fit: cover;
+            background-color: colors.$background_default;
+        }
     }
 }
