fix: bulk style fixes

--- a/src/components/profile/ProfileHero.module.scss
+++ b/src/components/profile/ProfileHero.module.scss
@@ -1,5 +1,7 @@
 .profile-hero {
     .image {
-        font-size: normal; // temp
+        width: 100%;
+        height: 20.7rem;
+        object-fit: cover;
     }
 }
