--- a/src/components/profile/ProfileUser.module.scss
+++ b/src/components/profile/ProfileUser.module.scss
@@ -1,3 +1,21 @@
+@use "../../styles/colors.scss";
+
 .profile-user {
-    font-weight: normal; // temp
+    display: grid;
+    place-items: center;
+    margin-top: -10.125rem;
+
+    .name {
+        margin-top: 1.625rem !important;
+        font-size: 3rem !important;
+        font-weight: 800 !important;
+    }
+
+    .info {
+        margin-top: 1.625rem !important;
+        text-align: center !important;
+        width: 50% !important;
+        font-size: 0.875rem !important;
+        color: colors.$text_secondary;
+    }
 }
