--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -26,7 +26,7 @@
     font-size: 0.875rem !important;
 
     span {
-        padding-left: .5rem;
+        padding-left: 0.5rem;
     }
 }
 
@@ -35,7 +35,8 @@
     transform: scale(0.7);
 }
 
-.title, .price{
+.title,
+.price {
     margin: 0;
     font-weight: bold;
 }
@@ -45,19 +46,19 @@
     padding-right: 1rem;
 }
 
-.price{
+.price {
     color: colors.$secondary_main !important;
     font-size: 0.875rem !important;
 }
 
 .badge {
     position: absolute !important;
-    top: .5rem;
+    top: 0.5rem;
     left: 1.5rem;
     color: colors.$background_paper !important;
     background-color: colors.$secondary_main !important;
     width: 3.3rem;
-    border-radius: .3rem;
+    border-radius: 0.3rem;
     display: flex !important;
     flex-direction: row !important;
     align-items: stretch !important;
@@ -65,12 +66,16 @@
     svg {
         transform: scale(0.5) !important;
     }
-    
+
     span {
         font-weight: bold;
-        margin-top: .1rem;
+        margin-top: 0.1rem;
         transform: translate(0);
     }
+}
+
+.card {
+    height: 100% !important;
 }
 
 .countdown {
@@ -84,9 +89,11 @@
     text-align: center;
     color: colors.$background_paper !important;
     font-weight: bold;
-    padding: .2rem 0;
+    padding: 0.2rem 0;
 }
 
-.title, .likes, .media {
+.title,
+.likes,
+.media {
     cursor: pointer !important;
 }
