fix: more small style fixes

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -8,11 +8,11 @@
 .searchInput {
     flex: 1;
     font-size: 1rem;
-    margin-left: .25rem;
+    margin-left: 0.25rem;
 }
 
 .searchIcon {
-    padding: 3px;
+    padding: 2px;
     margin-left: 5px;
 }
 
