--- a/src/components/profile/ProfileCollection.module.scss
+++ b/src/components/profile/ProfileCollection.module.scss
@@ -1,4 +1,8 @@
 .profile-collection {
     margin-top: 6.25rem;
     margin-bottom: 9rem;
+
+    .title {
+        font-size: 3rem !important;
+    }
 }
