--- a/src/components/profile/ProfileCollectionFilters.module.scss
+++ b/src/components/profile/ProfileCollectionFilters.module.scss
@@ -1,9 +1,12 @@
 @use "../../styles/colors.scss";
 
 .profile-collection-filters {
+    margin-bottom: 2.375rem;
+
     .search-icon {
         color: colors.$text_primary !important;
         margin-left: 0.5rem !important;
+        padding: 2px !important;
     }
     .search {
         background-color: colors.$background_paper !important;
