--- a/src/components/activity/ActivityFilters.module.scss
+++ b/src/components/activity/ActivityFilters.module.scss
@@ -1,6 +1,7 @@
 @use "../../styles/colors.scss";
 
 .activity-filters {
+    margin-top: -10.5rem;
     margin-bottom: 2.375rem;
 
     .search-icon {
