fix: fixed styles for Explore page

--- a/src/components/explore/ExploreTitle.module.scss
+++ b/src/components/explore/ExploreTitle.module.scss
@@ -1,3 +1,7 @@
 .explore-title {
-    font-weight: normal; // temp
+    .title {
+        font-size: 3.75rem !important;
+        font-weight: 900 !important;
+        line-height: 4.571rem !important;
+    }
 }
